--- a/entrega_1.ipynb
+++ b/entrega_1.ipynb
@@ -55,9 +55,16 @@
    "source": [
     "### Objetivo\n",
     "\n",
+    "**Objetivo Geral**\n",
+    "\n",
     "Neste projeto, o objetivo será apresentar a existência de uma correlação entre o aumento dos casos de covid e o aumento do abandono do ensino médio nos anos da pandemia. Serão apresentados dados agrupados por estados brasileiros e por regiões. O uso de séries temporais será essencial para expandir a análise proposta, e portanto, será a principal ferramenta de visualização de dados empregada neste projeto. \n",
     "\n",
-    "Com o objetivo de trazer reflexões sobre as causas do abandono escolar, será feito também uma predição de como a proporção do abandono escolar deveria estar quando os casos de covid diminuem após o fim da pandemia. Para isso, serão utilizados modelos preditivos de regressão, que auxiliaram a gerar uma estimativa das quantidades de alunos que abandoraram o ensino médio nos anos pós pandemia. \n"
+    "Com o objetivo de trazer reflexões sobre as causas do abandono escolar, será feito também uma predição de como a proporção do abandono escolar deveria estar quando os casos de covid diminuem após o fim da pandemia. Para isso, serão utilizados modelos preditivos de regressão, que auxiliaram a gerar uma estimativa das quantidades de alunos que abandoraram o ensino médio nos anos pós pandemia. \n",
+    "\n",
+    "**Objetivos específicos**\n",
+    "- Identificar padrões e tendências na relação entre os picos de contaminação por COVID-19 e o aumento da evasão escolar.\n",
+    "- Aplicar métodos de séries temporais, como o modelo ARIMA, para modelar e prever possíveis impactos da pandemia na evasão escolar.\n",
+    "\n"
    ]
   },
   {
@@ -71,6 +78,22 @@
     "- Abandono por Região: contém a quantidade de estudantes que abandonaram o ensino médio, agrupados pelas regiões brasileiras. Os dados são referente aos anos de 2019 à 2021. A estrutura da tabela apresenta as colunas “Região”, “2019”, “2020”,  “2021”, “Var. em 2019 e 2020” e “Var. em 2020 e 2021”. A coleta foi feita por meio de download dos dados no site do INESC.\n",
     "- Covid por região: contém informações sobre os casos de covid agrupados pelas regiões brasileiras. Os dados são referente aos anos de 2020 à 2025. A estrutura da tabela apresenta as colunas \"Região\", \"População\", \"Casos novos notificados na semana epidemiológica\", \"Casos Acumulados\", \"Incidência covid-19 (100 mil hab)\", \"Óbitos novos notificados na semana epidemiológica\", \"Óbitos Acumulados\", \"Taxa mortalidade (100 mil hab)\". A coleta foi feita por meio de download dos dados no site do ministério da saúde por meio de filtros de seleção para escolher o período dos dados.\n",
     "- Covid por UF: contém informações sobre os casos de covid agrupados pelos estados brasileiros. Os dados são referente aos anos de 2020 à 2025. A estrutura da tabela apresenta as colunas \"UF\", \"População\", \"Casos novos notificados na semana epidemiológica\", \"Casos Acumulados\", \"Incidência covid-19 (100 mil hab)\", \"Óbitos novos notificados na semana epidemiológica\", \"Óbitos Acumulados\", \"Taxa mortalidade (100 mil hab)\". A coleta foi feita por meio de download dos dados no site do ministério da saúde por meio de filtros de seleção para escolher o período dos dados.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Referências\n",
+    "\n",
+    "INSTITUTO DE ESTUDOS SOCIOECONÔMICOS (INESC). Abandono no Ensino Médio brasileiro duplicou na pandemia. 06 de novembro de 2023. Disponível em: https://inesc.org.br/abandono-no-ensino-medio-brasileiro-duplicou-na-pandemia/. Acesso em: 28 fev. 2025.\n",
+    "\n",
+    "\n",
+    "MINISTÉRIO DA SAÚDE. Covid-19 no brasil. 27 de fevereiro de 2025. Disponível em: https://infoms.saude.gov.br/extensions/covid-19_html/covid-19_html.html. Acesso em: 28 fev. 2025.\n",
+    "\n",
+    "SILVA FILHO, R. B.; ARAÚJO, R. M. L. Evasão e abandono escolar na educação básica no Brasil: fatores,causas e possíveis consequências. Educação por escrito, Porto Alegre, v. 8, n. 1, p. 35-48, jan./jun. 2017. Disponível em: https://pucrs.emnuvens.com.br/porescrito/article/view/24527/15729. Acesso em: 28 fev. 2025.\n",
+    "\n",
+    "SOUSA, A. A. et al. Evasão escolar no ensino médio: velhos ou novos dilemas? Vértices, Campos dos Goytacazes, v. 13, n. 1, p. 25-37, jan./abr. 2011. Disponível em: https://editoraessentia.iff.edu.br/index.php/vertices/article/view/1809-2667.20110002/641. Acesso em: 28 fev. 2025. \n"
    ]
   }
  ],
