--- a/entrega_4.ipynb
+++ b/entrega_4.ipynb
@@ -737,7 +737,7 @@
    "source": [
     "# **Apresentação**\n",
     "\n",
-    "Colocar os links dos vídeos."
+    "Link vídeo postado no youtube: https://youtu.be/k1dsn8kE4O0"
    ]
   },
   {
